# Agile

./: .env.example  package-lock.json  pyproject.toml
alembic/: env.py
alembic/versions/: 29cccaf6e826_add.py  54e24ed49680_1000.py  9237311ec1b6_auth.py  970103796b60_10.py
app/: celery.py  database.py  enums.py  main.py  models.py  settings.py  utils.py
app/admin/: settings.py  views.py
app/routers/: auth.py  tasks.py
app/schemas/: tasks.py
app/websocket/: dependencies.py  manager.py  routes.py  utils.py
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @floating-ui.js  @radix-ui.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  geist.js  get-nonce.js  lucide-react.js  next-themes.js  next.js  react-remove-scroll-bar.js  react-remove-scroll.js  react-style-singleton.js  tailwind-merge.js  tslib.js  use-callback-ref.js  use-sidecar.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/webpack/: webpack.895b2b5b167d52c3.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  page.tsx
frontend/components/: dashboard.tsx  kanban-board.tsx  project-settings.tsx  task-detail.tsx
template/components/: app-sidebar.tsx
(+4 files in other folders)
