[project]
name = "agile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "argon2-cffi>=25.1.0",
    "celery>=5.5.3",
    "faker>=37.5.3",
    "fastapi[all]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-jose>=3.5.0",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.41",
    "starlette>=0.47.1",
    "starlette-admin>=0.15.1",
    "uvicorn>=0.35.0",
]
